# airo-plyreader

./: .gitignore  docker-compose.yaml  pyproject.toml
src/: __init__.py  clustering.py  color_segmentation.py  config.py  cylinder_fitting.py  downsampling.py  main.py  pca_analysis.py  ply_io.py  viewer.py  visualization.py
src/analysis/: clustering.py  pca_analysis.py
src/core/: gpu.py  utils.py
src/file_io/: ply_io.py
src/preprocessing/: color_segmentation.py  downsampling.py  hsv_analysis.py  roi_selection.py
src/visualization/: visualization.py
