[project]
name = "airo-plyreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5.0",
    "pyyaml>=6.0.0",
    "plyfile>=1.0.3",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.4",
    "pyransac3d>=0.6.0",
]
